# template-extension-module

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  publish.yml
src/: main.cpp
src/template_extension_module/: __init__.py  _version.py.in
tests/: __init__.py  version_test.py
