[project]
name = "template-extension-module"
version = "0.0.1.dev3"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kevin Marchais", email = "kevinmarchais@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
template-extension-module = "template_extension_module:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "pre-commit>=4.0.1", "pytest>=8.3.4", "ruff>=0.8.6"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]
